// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/gitea getRepos should return an array of repos 1`] = `
Array [
  Array [
    "repos/search/",
    Object {
      "paginate": true,
    },
  ],
]
`;

exports[`platform/gitea getRepos should return an array of repos 2`] = `
Array [
  "a/b",
  "c/d",
]
`;

exports[`platform/gitea initPlatform() should accept custom endpoint 1`] = `
Object {
  "endpoint": "https://gitea.renovatebot.com/",
  "gitAuthor": "a@b.com",
}
`;

exports[`platform/gitea initPlatform() should default to gitea.com 1`] = `
Object {
  "endpoint": "https://gitea.com/api/v1/",
  "gitAuthor": "a@b.com",
}
`;

exports[`platform/gitea initPlatform() should default to gitea.com 2`] = `
Array [
  Array [
    "user?token=some-token",
  ],
]
`;

exports[`platform/gitea initRepo should escape all forward slashes in project names 1`] = `
Array [
  Array [
    "repos/some%2Frepo%2Fproject",
  ],
  Array [
    "user?token=some-token",
  ],
]
`;

exports[`platform/gitea initRepo should fall back if html_url is empty 1`] = `
Array [
  Array [
    "repos/some%2Frepo%2Fproject",
  ],
  Array [
    "user?token=some-token",
  ],
]
`;

exports[`platform/gitea setBaseBranch(branchName) sets the base branch 1`] = `
Array [
  Array [
    "repos/some%2Frepo",
  ],
  Array [
    "user?token=tok",
  ],
]
`;
